Add new aliases for hooks and UI components in TypeScript config and Vite config. Update App component to include Layout and enhance Home component with tabs for better navigation and organization of content.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "noUnusedParameters": true,
     "types": ["vite-plugin-svgr/client", "node"],
     "paths": {
-      "@assets/*": ["./assets/*"]
+      "@assets/*": ["./assets/*"],
+      "@hooks-api/*": ["./src/hooks-api/*"],
+      "@kdan-ui": ["./src/kdan-ui/index.ts"],
     },
     "noFallthroughCasesInSwitch": true
   },
