--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "query-string": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.15.0",
     "swr": "^2.3.0",
     "vite-plugin-svgr": "^4.2.0"
