--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^5.16.13",
+    "@mui/x-date-pickers": "^6.19.7",
     "axios": "^1.4.0",
     "date-fns": "^2.17.0",
     "query-string": "^9.1.0",
