feat: Update TypeScript configuration for aliasing, and enhance PharmacyMaskList and PharmacyTimeSearch components with new form and table structures for better user interaction.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "types": ["vite-plugin-svgr/client", "node"],
     "paths": {
       "@assets/*": ["./assets/*"],
-      "@hooks-api/*": ["./src/hooks-api/*"],
+      "@hooks-api": ["./src/hooks-api/index.ts"],
       "@kdan-ui": ["./src/kdan-ui/index.ts"],
     },
     "noFallthroughCasesInSwitch": true
