--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -44,8 +45,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-watch": "^8.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-checker": "^0.8.0"
+    "vite": "^5.4.14",
+    "vite-plugin-checker": "^0.8.0",
+    "vitest": "^3.0.8"
   },
   "engines": {
     "npm": "please-use-pnpm",
