--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather_t",
+  "name": "kdan_frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -52,5 +52,6 @@
   "engines": {
     "npm": "please-use-pnpm",
     "yarn": "please-use-pnpm"
-  }
+  },
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
