refactor: Rename project from Kdan Frontend to Pharmacy Frontend, update related paths and components, and introduce new pharmacy-ui library for UI components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,15 +22,14 @@
     "paths": {
       "@assets/*": ["./assets/*"],
       "@hooks-api": ["./src/hooks-api/index.ts"],
-      "@kdan-ui": ["./src/kdan-ui/index.ts"],
+      "@pharmacy-ui": ["./src/pharmacy-ui/index.ts"],
     },
     "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src",
     "./app/**/*",
-    "./vite.config.ts",
-    "./.eslintrc.json",
+    "./.eslintrc.json"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
